Track model.pkl with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 mlruns/0/0493000c4326437fb405a198102a1eee/artifacts/Random[[:space:]]Forest[[:space:]]-[[:space:]]Fraud[[:space:]]Data/model.pkl filter=lfs diff=lfs merge=lfs -text
 mlruns/0/27c139955f9a489c99c509765822c173/artifacts/Random[[:space:]]Forest[[:space:]]-[[:space:]]Fraud[[:space:]]Data/model.pkl filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs
 *.pkl filter=lfs diff=lfs merge=lfs -text
